--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 <body class="bg-[#0d0d0d] text-gray-100">
 
   <!-- Navbar -->
-  <!-- Navbar -->
 <nav class="w-full border-b border-gray-800 bg-[#0d0d0d]/95 backdrop-blur-sm sticky top-0 z-50">
   <div class="max-w-4xl mx-auto px-6 sm:px-8 py-4 flex justify-between items-center">
     <!-- GitHub Avatar -->
-    <a href="https://github.com/ayush-848" target="_blank" class="flex items-center gap-3">
+    <a href="https://github.com/ayush-848" rel="noopener noreferrer" target="_blank" class="flex items-center gap-3">
       <img src="https://github.com/ayush-848.png"
            alt="Ayush GitHub"
            class="w-9 h-9 rounded-full border border-gray-700 hover:scale-105 transition-transform duration-200" />
@@ -45,23 +44,94 @@
   <!-- Main Content -->
   <main class="max-w-4xl mx-auto px-6 sm:px-8 py-16 space-y-20">
 
-    <!-- Hero -->
-    <section id="hero">
-      <h1 class="text-4xl font-bold text-white mb-4">Ayush Deb</h1>
-      <p class="text-gray-400 text-base leading-relaxed">
-        Full Stack Developer • UI/UX Designer
-      </p>
-    </section>
+<!-- Hero + About + Socials (Left Aligned) -->
+<section id="hero" class="flex flex-col sm:flex-row items-start gap-6">
+        <img
+          src="https://github.com/ayush-848.png"
+          alt="Ayush Deb"
+          class="w-30 h-30 sm:w-36 sm:h-36 rounded-full border border-gray-800 shadow-md"
+        />
+        <div class="space-y-2">
+           <div>
+      <h1 class="text-3xl font-bold text-white">Ayush Deb</h1>
+      <p class="text-base text-gray-400 mt-1">Full Stack Developer</p>
+      <div class="flex items-center gap-1 text-sm text-gray-500 mt-1">
+        <!-- Location Icon -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 11.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z" />
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19 10.5c0 6.075-7 12-7 12S5 16.575 5 10.5a7 7 0 1114 0z" />
+        </svg>
+        <span>India</span>
+      </div>
+    </div>
+          <p class="text-gray-400 text-sm max-w-md">
+            I craft full-stack applications with clean architecture.
+          </p>
 
-    <!-- About -->
-    <section id="about">
-      <h2 class="text-lg font-semibold text-gray-300 mb-2">About</h2>
-      <p class="text-gray-400 leading-relaxed">
-        I love creating highly polished frontend experiences that balance function and form. I also build performant
-        backend APIs and tools. Most of my time goes into side projects that challenge how people interact with web
-        content.
-      </p>
-    </section>
+          <!-- Social Links -->
+          <div class="flex gap-4 pt-2">
+            <!-- GitHub -->
+            <a
+              href="https://github.com/ayush-848"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="flex items-center gap-2 text-xs font-medium px-3 py-2 rounded-lg bg-gray-900/60 border border-gray-800 hover:bg-gray-800/60 text-gray-300 hover:text-white"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="w-4 h-4"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+                />
+              </svg>
+              GitHub
+            </a>
+
+            <!-- LinkedIn -->
+            <a
+              href="https://linkedin.com/in/ayush-848"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="flex items-center gap-2 text-xs font-medium px-3 py-2 rounded-lg bg-gray-900/60 border border-gray-800 hover:bg-gray-800/60 text-gray-300 hover:text-white"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="w-4 h-4"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+                />
+              </svg>
+              LinkedIn
+            </a>
+
+            <!-- Medium -->
+            <a
+              href="https://medium.com/@ayush-848"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="flex items-center gap-2 text-xs font-medium px-3 py-2 rounded-lg bg-gray-900/60 border border-gray-800 hover:bg-gray-800/60 text-gray-300 hover:text-white"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="w-4 h-4"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M13.54 12a6.8 6.8 0 01-6.77 6.82A6.8 6.8 0 010 12a6.8 6.8 0 016.77-6.82A6.8 6.8 0 0113.54 12zM20.96 12c0 3.54-1.51 6.42-3.38 6.42-1.87 0-3.39-2.88-3.39-6.42s1.52-6.42 3.39-6.42 3.38 2.88 3.38 6.42M24 12c0 3.17-.53 5.75-1.19 5.75-.66 0-1.19-2.58-1.19-5.75s.53-5.75 1.19-5.75C23.47 6.25 24 8.83 24 12z"
+                />
+              </svg>
+              Medium
+            </a>
+          </div>
+        </div>
+      </section>
 
     <!-- Projects -->
     <section id="projects" class="mt-20">
@@ -78,16 +148,16 @@
     <!-- Contact -->
     <section id="contact">
       <h2 class="text-lg font-semibold text-gray-300 mb-2">Contact</h2>
-      <p class="text-gray-400 mb-2">Let's build something cool together.</p>
-      <a href="mailto:ayush@email.com" class="text-blue-500 hover:text-blue-400 underline">
-        ayush@email.com
+      <p class="text-gray-400 mb-2">Feel free to reach out to me at</p>
+      <a href="mailto:ayushdeb848@gmail.com" class="text-blue-500 hover:text-blue-400 underline">
+        ayushdeb848@gmail.com
       </a>
     </section>
 
     <!-- Footer -->
-    <footer class="text-center text-sm text-gray-600 border-t border-gray-800 pt-12">
-      &copy; 2025 Ayush Deb
-    </footer>
+   <footer class="text-center text-sm text-gray-600 border-t border-gray-800 pt-12">
+     &copy; <script>document.write(new Date().getFullYear())</script> Ayush Deb
+</footer>
 
   </main>
 </body>
