--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
   <!-- Navbar -->
 <nav class="w-full border-b border-gray-800 bg-[#0d0d0d]/95 backdrop-blur-sm sticky top-0 z-50">
   <div class="max-w-4xl mx-auto px-6 sm:px-8 py-4 flex justify-between items-center">
-    <!-- GitHub Avatar -->
-    <a href="https://github.com/ayush-848" rel="noopener noreferrer" target="_blank" class="flex items-center gap-3">
-      <img src="https://github.com/ayush-848.png"
-           alt="Ayush GitHub"
-           class="w-9 h-9 rounded-full border border-gray-700 hover:scale-105 transition-transform duration-200" />
-      <span class="text-white text-sm font-semibold hidden sm:inline">Ayush Deb</span>
-    </a>
+    
+    <!-- GitHub Avatar & Name (hidden on mobile) -->
+    <div class="hidden sm:flex items-center gap-3">
+      <a href="https://github.com/ayush-848" rel="noopener noreferrer" target="_blank" class="flex items-center gap-3">
+        <img src="https://github.com/ayush-848.png"
+             alt="Ayush GitHub"
+             class="w-9 h-9 rounded-full border border-gray-700 hover:scale-105 transition-transform duration-200" />
+        <span class="text-white text-sm font-semibold">Ayush Deb</span>
+      </a>
+    </div>
 
     <!-- Menu Links -->
     <div class="flex items-center space-x-6 text-sm">
@@ -40,6 +43,7 @@
     </div>
   </div>
 </nav>
+
 
   <!-- Main Content -->
   <main class="max-w-4xl mx-auto px-6 sm:px-8 py-16 space-y-20">
