fixed tech stack

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
     <!-- Skills -->
     <section id="skills">
-      <h2 class="text-lg font-semibold text-gray-300 mb-6">Skills</h2>
+      <h2 class="text-lg font-semibold text-gray-300 mb-6">My Tech Stack</h2>
       <div id="skills-container" class="grid grid-cols-1 sm:grid-cols-3 gap-8"></div>
     </section>
 
