--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <a href="#projects" class="text-gray-400 hover:text-white transition-colors">Projects</a>
       <a href="#skills" class="text-gray-400 hover:text-white transition-colors">Skills</a>
       <a href="#contact" class="text-gray-400 hover:text-white transition-colors">Contact</a>
-      <a href="/resume.pdf" target="_blank"
+      <a href="https://drive.google.com/file/d/1ES8arbsRXtGoxQu4cVLzZMr9vRzOp-pR/view?usp=sharing" target="_blank"
          class="text-blue-500 hover:text-blue-400 border border-blue-500/30 px-3 py-1.5 rounded-md font-medium hover:bg-blue-500/10 transition-all">
         Resume
       </a>
