--- a/index.html
+++ b/index.html
@@ -141,19 +141,19 @@
 
     <!-- Projects -->
     <section id="projects" class="mt-20">
-      <h2 class="text-lg font-semibold text-gray-300 mb-6">Projects</h2>
+      <h2 class="text-xl font-semibold text-gray-300 mb-6">Projects</h2>
       <div id="project-list" class="space-y-8"></div>
     </section>
 
     <!-- Skills -->
     <section id="skills">
-      <h2 class="text-lg font-semibold text-gray-300 mb-6">My Tech Stack</h2>
+      <h2 class="text-xl font-semibold text-gray-300 mb-6">My Tech Stack</h2>
       <div id="skills-container" class="grid grid-cols-1 sm:grid-cols-3 gap-8"></div>
     </section>
 
     <!-- Contact -->
     <section id="contact">
-      <h2 class="text-lg font-semibold text-gray-300 mb-2">Contact</h2>
+      <h2 class="text-xl font-semibold text-gray-300 mb-2">Contact</h2>
       <p class="text-gray-400 mb-2">Feel free to reach out to me at</p>
       <a href="mailto:ayushdeb848@gmail.com" class="text-blue-500 hover:text-blue-400 underline">
         ayushdeb848@gmail.com
